# fast_alchemy

./: .env  README.md  docker-compose.yml  dockerfile  dockerfile.old  pyproject.toml.backup
accounts/: alembic.ini  createsuperuser.py  dockerfile  pyproject.toml
accounts/accounts/: __init__.py  actions.py  auth.py  db.py  main.py  models.py  permissions.py  schemas.py  user_manager.py  users.py
accounts/alembic/: env.py
accounts/alembic/versions/: 8cd9a8997df1_initial.py  9e597cf2ace1_initial.py
accounts/tests/: test_accounts.py
app/: dockerfile  pyproject.toml
app/app/: __init__.py  actions.py  config.py  db.py  main.py  models.py  schemas.py
app/tests/: test_app.py
