[tool.poetry]
name = "accounts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.73.0"
psycopg2 = "^2.9.3"
uvicorn = "^0.17.4"
asyncpg = "^0.25.0"
SQLAlchemy = "1.4.31"
pyjwt = "2.3.0"
passlib = {version = "", extras = ["bcrypt"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
sqlalchemy-stubs = "^0.4"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.1.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.19.2"
alembic = "^1.7.6"
Faker = "13.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
